--- a/seccion#1/index.html
+++ b/seccion#1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./seccion-1.js"></script>
+    <!-- <script src="./reto-1.js"></script> -->
+    <script src="./reto-2.js"></script>
   </body>
 </html>
